spark2 (2.3.1-bin-hadoop2.6-3~stretch1) stretch-wikimedia; urgency=medium

  * Add extra installation of binary pyarrow 0.8.0.
    See also: https://phabricator.wikimedia.org/T202812

 -- Andrew Otto (WMF) <otto@wikimedia.org>  Thu, 28 Aug 2018 19:56:42 +0000

spark2 (2.3.1-bin-hadoop2.6-2~stretch1) stretch-wikimedia; urgency=medium

  * Added versionless symlink for py4j so users of this package don't need to
    update PYTHONPATHs if they launch pyspark without using the shell wrapper
    (e.g. Jupyter Notebook iPython kernel).

 -- Andrew Otto <otto@wikimedia.org>  Thu, 02 Aug 2018 20:05:03 +0000

spark2 (2.3.1-bin-hadoop2.6-1~stretch1) stretch-wikimedia; urgency=medium

  * 2.3.1 binary release for Hadoop 2.6

 -- Andrew Otto <otto@wikimedia.org>  Thu, 02 Aug 2018 20:05:03 +0000

spark2 (2.3.0-bin-hadoop2.6-3~stretch1) stretch-wikimedia; urgency=medium

  * Fix permissions on spark-thriftserver executable.

 -- Andrew Otto (WMF) <otto@wikimedia.org>  Thu, 05 Apr 2018 20:27:35 +0000

spark2 (2.3.0-bin-hadoop2.6-2~stretch1) stretch-wikimedia; urgency=medium

  * Added spark2-thriftserver executable.

 -- Andrew Otto (WMF) <otto@wikimedia.org>  Thu, 05 Apr 2018 20:11:13 +0000

spark2 (2.3.0-bin-hadoop2.6-1~stretch1) stretch-wikimedia; urgency=medium

  * 2.3.0 binary release for Hadoop 2.6

 -- Andrew Otto (WMF) <otto@wikimedia.org>  Thu, 05 Apr 2018 18:53:53 +0000

spark2 (2.2.1-bin-hadoop2.6-1~stretch1) stretch-wikimedia; urgency=medium

  * 2.2.1 binary release for Hadoop 2.6
  * Now depends on Java 8

 -- Andrew Otto (WMF) <otto@wikimedia.org>  Tue, 23 Jan 2018 15:46:46 +0000

spark2 (2.1.2-bin-hadoop2.6-3~jessie1) jessie-wikimedia; urgency=low

  * 2.1.2 -3 release for Hadoop 2.6
  * Better conditionals in spark2.postinst to do the right things when installing and
    configuring spark2-assembly.zip in HDFS.

 -- Andrew Otto (WMF) <otto@wikimedia.org>  Fri, 10 Nov 2017 17:24:00 +0000

spark2 (2.1.2-bin-hadoop2.6-2) jessie-wikimedia; urgency=low
