@@ -2,6 +2,7 @@ spark2 (2.3.1-bin-hadoop2.6-3~stretch1) stretch-wikimedia; urgency=medium
 
   * Add extra installation of binary pyarrow 0.8.0.
     See also: https://phabricator.wikimedia.org/T202812
+  * Default to python3 and ipython3 for pyspark.
 
  -- Andrew Otto (WMF) <otto@wikimedia.org>  Thu, 28 Aug 2018 19:56:42 +0000
 
